# mssql_to_snowflake

./: README.md  equ_pipeline_all.py  pyproject.toml
.dg/: telemetry.yaml
.tmp_dagster_home_dbl77s08/history/: runs.db
.tmp_dagster_home_dbl77s08/history/runs/: 01700f52-30ed-458e-be1e-522878bbb410.db  03aec884-6903-4880-b4aa-2e065489a694.db  54e2c1b3-7b02-4fb7-8e8e-630aad424414.db  5baf3377-8600-495a-a4b2-7465457761cc.db  998b4da8-10fc-4090-ae75-87333d43a0b4.db  af532250-b7a3-4656-a5de-2fee182779e4.db  index.db
.tmp_dagster_home_dbl77s08/storage/01700f52-30ed-458e-be1e-522878bbb410/compute_logs/: mhkfumsi.err
.tmp_dagster_home_dbl77s08/storage/03aec884-6903-4880-b4aa-2e065489a694/compute_logs/: sefzdfok.err
.tmp_dagster_home_dbl77s08/storage/54e2c1b3-7b02-4fb7-8e8e-630aad424414/compute_logs/: utxqatoy.err
.tmp_dagster_home_dbl77s08/storage/5baf3377-8600-495a-a4b2-7465457761cc/compute_logs/: wemwiowb.err
.tmp_dagster_home_dbl77s08/storage/998b4da8-10fc-4090-ae75-87333d43a0b4/compute_logs/: dwvnjixt.err
.tmp_dagster_home_dbl77s08/storage/af532250-b7a3-4656-a5de-2fee182779e4/compute_logs/: isaqkdwy.err
.tmp_dagster_home_tlui3kzs/history/: runs.db
.tmp_dagster_home_tlui3kzs/history/runs/: .db  42b0a836-6421-4233-9105-9998b6b74bf5.db  index.db
.tmp_dagster_home_tlui3kzs/schedules/: schedules.db
src/mssql_data_nmbai/: definitions.py
src/mssql_data_nmbai/defs/: assets.py  bcp_assets.py  config.py  dlt_mssql_source.py  equ_pipeline.py  load_bcp_copy_into.py  mssql.py  snowflake_dest.py  test_recupe_schema.py
(+2 files in other folders)
