[project]
name = "mssql_data_nmbai"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.14",
    "dagster-dlt>=0.28.14",
    "dlt[snowflake]>=1.22.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "mssql_data_nmbai"
registry_modules = [
    "mssql_data_nmbai.components.*",
]


